popup overflow fix

--- a/app/common/sass/partials/_layouts.scss
+++ b/app/common/sass/partials/_layouts.scss
@@ -246,7 +246,7 @@ body.blocked {
 }
 
 .sec--popup {
-    position: fixed;
+    position: absolute;
     z-index: 30;
     top: 0;
     right: 0;
@@ -261,5 +261,9 @@ body.blocked {
     @extend %helper--flex--stretch;
     &__inner {
         @extend %helper--flex--center--center;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
